--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="og:title" property="og:title" content="Suomi Koodarit"/>
+    <meta name="og:title" property="og:title" content="SuomiKoodarit"/>
     <meta name="description" content="Suomalainen koodaukseen keskittynyt discord yhteisö."/>
     <meta name="author" content="Mailar, Version, Mysterymoment"/>
     <meta name="keywords" content="suomikoodarit, suomi, koodarit, finland, koodaus, ohjelmointi, ohjelmistokehitys, koodi, ohjelmointikieli, yhteisö"/>
-    <title>Suomi Koodarit - Official</title>
+    <title>SuomiKoodarit - Official</title>
     <link rel="stylesheet" href="tailwind.css"/>
     <link rel="stylesheet" href="main.css"/>
     <link rel="icon" href="assets/imgs/Logo.png" type="image/x-icon"/>
@@ -20,7 +20,7 @@
           <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
             <div class="flex-shrink-0 flex items-center">
               <a href="#">
-                <h1>Suomi Koodarit</h1>
+                <h1>SuomiKoodarit</h1>
               </a>
             </div>
           </div>
@@ -30,7 +30,7 @@
     <main>
       <div class="bg-black">
         <div class="main-bg text-center">
-          <img id="logo" src="assets/imgs/normal-logo.png" class="blurred rounded" alt="Suomi Koodarit"/>
+          <img id="logo" src="assets/imgs/normal-logo.png" class="blurred rounded" alt="SuomiKoodarit"/>
         </div>
         <script src="assets/js/script.js"></script>
       </div>
@@ -39,22 +39,12 @@
           <div class="left-container">
             <h2>Tietoa Ryhmästämme</h2>
             <p>
-              <blue>Suomi Koodarit</blue> on marraskuussa 2021
-              perustettu Discord palvelin, jossa pääsääntöisesti on keskustelua
-              koodaamisesta, pelikehityksestä, webkehityksestä ja muista tietokonemaailmaan
-              liittyvistä asioista. 
+              <blue>SuomiKoodarit</blue> on marraskuussa 2021 perustettu Discord palvelin, jossa pääsääntöisesti on keskustelua koodaamisesta, pelikehityksestä, webkehityksestä ja muista tietokonemaailmaan liittyvistä asioista. 
               <br>
               <br>
-              Teimme yhteisön, jotta näistä asioista olisi
-              helppo keskustella ja kehittyä.
-              Palvelimella on päivittäin
-              keskustelua ja haluamme auttaa muita, jolloin kehittyminen
-              tietokonemaailman asioissa olisi mukavaa ja helpompaa.
-              Yhteisö on
-              tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat
-              lämpimästi tervetulleita.
+              Teimme yhteisön, jotta näistä asioista olisi helppo keskustella ja kehittyä. Palvelimella on päivittäin keskustelua ja haluamme auttaa muita, jolloin kehittyminen tietokonemaailman asioissa olisi mukavaa ja helpompaa. Yhteisö on tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat lämpimästi tervetulleita.
             </p>
-              <h3>Liity mukaan Suomi Koodarit discord yhteisöön.</h3>
+              <h3>Liity mukaan SuomiKoodarit discord yhteisöön.</h3>
               <a href="https://disboard.org/server/903673793074036776" target="_blank" class="btn mt-5"><i class="fas fa-plug"></i> Liity yhteisöön </a>
           </div>
           <div class="right-container">
@@ -63,12 +53,10 @@
         </div>
       </div>
     </main>
-
     <footer>
       <div class="container">
-        <p>Created by Suomi koodarit &copy; 2022</p>
+        <p>Created by SuomiKoodarit &copy; 2022</p>
       </div>
     </footer>
-
   </body>
 </html>
