--- a/public/index.html
+++ b/public/index.html
@@ -1,68 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmointiin ja IT-maailmaan liittyvistä aiheista. Yhteisö on avoin kaikille ohjelmoinnista kiinnostuneille."/>
-    <meta name="author" content="Mailar, Version, Mysterymoment"/>
-    <meta name="keywords" content="suomikoodarit, suomi, koodarit, finland, koodaus, ohjelmointi, ohjelmistokehitys, koodi, ohjelmointikieli, yhteisö"/>
-    <meta property='og:title' content='SuomiKoodarit – Suomalaisten koodaajien yhteisö'/>
-    <meta property='og:image' content='/assets/imgs/meta.jpg'/>
-    <meta property='og:description' content='SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmointiin ja IT-maailmaan liittyvistä aiheista. Yhteisö on avoin kaiken tasoisille ohjelmoinnista kiinnostuneille.'/>
-    <meta property='og:url' content='https://suomikoodarit.fi'/>
-    <title>SuomiKoodarit - Official</title>
-    <link rel="stylesheet" href="tailwind.css"/>
-    <link rel="stylesheet" href="main.css"/>
-    <link rel="icon" href="assets/imgs/Logo.png" type="image/x-icon"/>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmointiin ja IT-maailmaan liittyvistä aiheista. Yhteisö on avoin kaikille ohjelmoinnista kiinnostuneille."
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>SuomiKoodarit</title>
   </head>
   <body>
-    <nav class="navbar-background">
-      <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-        <div class="relative flex items-center justify-between h-16">
-          <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
-            <div class="flex-shrink-0 flex items-center">
-              <a href="#">
-                <h1>SuomiKoodarit</h1>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <main>
-      <div class="bg-black">
-        <div class="main-bg text-center">
-          <img id="logo" src="assets/imgs/normal-logo.png" class="blurred rounded" alt="SuomiKoodarit"/>
-        </div>
-        <script src="assets/js/script.js"></script>
-      </div>
-      <div class="container max-w-7xl mt-10 mx-auto px-2 sm:px-6 lg:px-8">
-        <div class="row">
-          <div class="left-container">
-            <h2>Tietoa Ryhmästämme</h2>
-            <p>
-              <blue>SuomiKoodarit</blue> on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmointiin ja tietokonemaailmaan liittyvistä aiheista. 
-              <br>
-              <br>
-              Keskustelu yhteisössä on aktiivista ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisemisessa. Yhteisö on avoin kaikille ohjelmoinnista kiinnostuneille.
-            </p>
-              <h3>Liity mukaan SuomiKoodarit discord yhteisöön.</h3>
-              <a href="https://disboard.org/server/903673793074036776" target="_blank" class="btn mt-5"><i class="fas fa-plug"></i> Liity yhteisöön </a>
-          </div>
-          <div class="right-container">
-            <iframe src="https://discord.com/widget?id=903673793074036776&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>          
-          </div>
-          <div class="bottom-container">
-            <iframe src="https://trello.com/b/2V79QZlL.html" width="1200" height="1000" style=" display:block;border-style:none;margin:0 auto;"></iframe>
-          </div>
-        </div>
-      </div>
-    </main>
-    <footer>
-      <div class="container">
-        <p>Created by SuomiKoodarit &copy; 2022</p>
-      </div>
-    </footer>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
